# account-analyzer

./: Cargo.toml  Dioxus.toml  LICENSE
assets/: tailwind.css
src/: db.rs  main.rs  parsers.rs
src/components/: mod.rs
src/parsers/: icici.rs
src/ui/: app.rs  mod.rs  navbar.rs
src/ui/components/: app.rs  db_table.rs  home.rs  mod.rs  statement_details.rs
