[package]
name = "account-analyzer"
version = "0.1.0"
edition = "2024"
authors = ["Chetan Khilosiya <chetan.khilosiya@gmail.com>"]
description = "Application to analyze the bank statements and get data based on queries"
license = "MIT"
keywords = ["bank", "account", "analyze", "statement"]

[dependencies]
dioxus = { version = "0.7.9", features = ["router"] }
calamine = { version = "0.35.0", features = ["chrono"]}
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["std", "serde"]}

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
